@@ -1,3 +1,6 @@
+2011-01-14:
+	* (seebs) Automatically create prefix/state directories.
+ 
 2011-01-13:
 	* (seebs) Subtle cache fixup.
 
